OpenSearch-StatefulSets/OpenSearch-Dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-opensearch
  namespace: opensearch
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: default-http-backend
      port:
        number: 8080
  rules:
  - host: opensearch.eastnetic.com        
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: opensearch-dashboards-service
           port: 
            number: 80
